# yolov8-grpc-client

./: CMakeLists.txt  Dockerfile  client.cpp  config.json  config_odt.json  fire.names  start.sh  start_dev.sh  traffic.names  water-jugs.names
lib/msgpack-c/: CMakeCache.txt  cmake_install.cmake
lib/msgpack-c/example/: cmake_install.cmake
lib/msgpack-c/example/boost/: asio_send_recv  asio_send_recv_zlib  cmake_install.cmake  msgpack_variant_capitalize  msgpack_variant_mapbased
lib/msgpack-c/example/cpp03/: class_intrusive  class_intrusive_map  class_non_intrusive  cmake_install.cmake  custom  enum  map_based_versionup  protocol_new  reuse_zone  simple  speed_test  speed_test_nested_array  stream
lib/msgpack-c/example/cpp11/: cmake_install.cmake  container  non_def_con_class
lib/msgpack-c/example/x3/: cmake_install.cmake
src/tasks/object_detection/src/: Yolo.cpp  Yolo.hpp
src/tasks/tracker/: CentroidTracker.cpp  CentroidTracker.hpp  EventQueue.cpp  EventQueue.hpp  Hungarian.cpp  KalmanTracker.cpp  KalmanTracker.hpp  Utils.cpp  Utils.hpp  ViewTransformer.hpp  alice_tracker.cpp  bufferPhoto.hpp  poligonTrackerManager.cpp  poligonTrackerManager.hpp
src/triton/: # install grafana.dockerfile  Triton.cpp  Triton.hpp
